--- a/my-app/src/product-list/ProductsList.css
+++ b/my-app/src/product-list/ProductsList.css
@@ -6,6 +6,14 @@
     margin-right: 5px;
   }
   
+  .views {
+    margin: 10px 0;
+  }
+  
+  .views i {
+    margin-right: 5px;
+  }
+  
   .views .selected {
     border: 1px solid darkgray;
     background: lightgrey;
